--- a/templates/index.html
+++ b/templates/index.html
@@ -19,23 +19,18 @@
         <p>Online Users: <span id="online-users">0</span></p>
 
         <div class="row">
-            <div class="col-8" id="print">
-                <div class="board" id="board"></div>
+            <div class="col-2"></div>
+            <div class="col-8">
+                <button type="button" id="fillblack" disabled class="btn btn-dark" onclick="fillBlack()">Fill Black</button>
+                <button type="button" id="removeblack" disabled class="btn btn-light btn-outline-dark" onclick="removeBlack()">Remove Black</button>
+                <button type="button" id="addcircle" disabled class="btn btn-primary" onclick="addSolutionCircle()">Add Circle</button>
+                <button type="button" id="removecircle" disabled class="btn btn-primary" onclick="removeSolutionCircle()">Remove Circle</button>
+                <button type="button" id="removenumber" disabled class="btn btn-primary" onclick="removeNumber()">Remove Number</button>
+                <div id="print">
+                    <div class="board" id="board"></div>
+                </div>
             </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark" onclick="fillBlack()">Fill Black</button>
-                <button type="button" class="btn btn-light" onclick="removeBlack()">Remove Black</button>
-                <br />
-                <button type="button" class="btn btn-primary" onclick="direction=0;focusSelected()">Edit
-                    Horizontal</button>
-                <button type="button" class="btn btn-primary" onclick="direction=1;focusSelected()">Edit
-                    Vertical</button>
-                <br />
-                <button type="button" class="btn btn-primary" onclick="addSolutionCircle()">Add Circle</button>
-                <button type="button" class="btn btn-primary" onclick="removeSolutionCircle()">Remove Circle</button>
-                <br />
-                <button type="button" class="btn btn-primary" onclick="removeNumber()">Remove Number</button>
-                <br />
+            <div class="col-2">
                 <button type="button" class="btn btn-primary" onclick="printDialog(true)">Render Solution</button>
                 <button type="button" class="btn btn-primary" onclick="printDialog(false)">Render Empty</button>
                 <br />
@@ -44,14 +39,9 @@
             </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
-        integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
-        crossorigin="anonymous"></script>
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/socket.io.js"></script>
     <script src="static/js/main.js"></script>
     <script id="key-checker"></script>
 
