Add bootstrap CSS and buchstaben.com auto searcher

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/main.css" rel="stylesheet">
     <title>XWord</title>
 </head>
@@ -26,6 +24,7 @@
                 <button type="button" id="addcircle" disabled class="btn btn-primary" onclick="addSolutionCircle()">Add Circle</button>
                 <button type="button" id="removecircle" disabled class="btn btn-primary" onclick="removeSolutionCircle()">Remove Circle</button>
                 <button type="button" id="removenumber" disabled class="btn btn-primary" onclick="removeNumber()">Remove Number</button>
+                <button type="button" id="buchstabenCom" disabled class="btn btn-primary" onclick="openBuchstabenCom()">Search Buchstaben.com</button>
                 <div id="print">
                     <div class="board" id="board"></div>
                 </div>
