Import / Export from/to Base64 (locally)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -54,3 +54,7 @@ div.puzzle-field.solution-circle {
 div.puzzle-field.number-0::after {
     display:none;
 }
+
+button.btn-outline-dark:disabled {
+    border-color: #212529;
+}
