--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,16 +11,14 @@ div.puzzle-field {
     font-size: 200%;
 }
 
-div#print {
-    margin-top: 10px;
+div.puzzle-field span.char::before {
+    content: ".";
+    font-size: 0pt;
+    visibility: hidden;
 }
 
-div.board {
-    display: grid;
-    grid-gap: 0px;
-    grid-auto-rows: 50px;
-    grid-auto-columns: 50px;
-    margin-right: -24px;
+div#print {
+    margin-top: 10px;
 }
 
 div.highlight {
@@ -37,19 +35,14 @@ div.black {
     -webkit-print-color-adjust: exact;
 }
 
-div.hide-char span.char {
-    color: white;
-    display: none;
-}
-
 div.hide-char.black {
     color: black;
 }
-
+/*
 div.puzzle-field.solution-circle {
     border: 1px solid blue;
     border-radius: 50%;
-}
+}*/
 
 div.puzzle-field.number-0::after {
     display:none;
@@ -59,23 +52,37 @@ button.btn-outline-dark:disabled {
     border-color: #212529;
 }
 
+
 div.puzzle-field.black.selected {
     background-color: rgba(46, 67, 85, 0.616);
     color: rgba(46,67,85,0.0);
 }
 
-div.copy {
-    margin-top: 10px;
-    height: 100px;
-    line-break: anywhere;
-    overflow-y: hidden;
+div.puzzle-field.solution-circle {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' %3E%3Ccircle r='40' cx='50' cy='50' fill='white' stroke='blue'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    -webkit-print-color-adjust: exact;
 }
 
+
 @media print {
+    /* the whole board should fit on the page */
+    div.board {
+        padding: 20px;
+    }
+
     div.puzzle-field:not(.hide-char)::after {
-        display: none;
+        display: none; /* hide numbers in solution render */
     }
     div.puzzle-field.solution-circle:not(.hide-char) {
-        border: 0px;
+        background-image: none; /* hide circles in solution render */
+    }
+
+    div.hide-char span.char {
+        color: white;
+        visibility: hidden;
+        font-size: 0pt;
     }
 }
