--- a/templates/index.html
+++ b/templates/index.html
@@ -19,12 +19,24 @@
         <div class="row">
             <div class="col-xl-2"></div>
             <div class="col-xl-8">
-                <button type="button" id="fillblack" disabled class="btn btn-dark" onclick="fillBlack()">Fill Black</button>
-                <button type="button" id="removeblack" disabled class="btn btn-light btn-outline-dark" onclick="removeBlack()">Remove Black</button>
-                <button type="button" id="addcircle" disabled class="btn btn-primary" onclick="addSolutionCircle()">Add Circle</button>
-                <button type="button" id="removecircle" disabled class="btn btn-primary" onclick="removeSolutionCircle()">Remove Circle</button>
-                <button type="button" id="removenumber" disabled class="btn btn-primary" onclick="removeNumber()">Remove Number</button>
-                <button type="button" id="buchstabenCom" disabled class="btn btn-primary" onclick="openBuchstabenCom()">Search Buchstaben.com</button>
+                <div class="row">
+                    <div class="col-3 d-grid mx-auto">
+                        <button type="button" id="blackbutton" disabled class="btn btn-dark" onclick="fillBlack()">Fill
+                            Black</button>
+                    </div>
+                    <div class="col-3 d-grid mx-auto">
+                        <button type="button" id="circlebutton" disabled class="btn btn-primary"
+                            onclick="addSolutionCircle()">Add Circle</button>
+                    </div>
+                    <div class="col-3 d-grid mx-auto">
+                        <button type="button" id="removenumber" disabled class="btn btn-primary"
+                            onclick="removeNumber()">Remove Number</button>
+                    </div>
+                    <div class="col-3 d-grid mx-auto">
+                        <button type="button" id="buchstabenCom" disabled class="btn btn-primary"
+                            onclick="openBuchstabenCom()">Search Buchstaben.com</button>
+                    </div>
+                </div>
                 <div id="print">
                     <div class="board" id="board"></div>
                 </div>
