Add a recompute numbers button which automatically recomputes numbers...

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,7 @@
                 <br />
                 <button type="button" class="btn btn-primary" onclick="serverStore()">Server store puzzle</button>
                 <button type="button" class="btn btn-primary" onclick="serverLoad()">Server load puzzle</button>
+                <button type="button" class="btn btn-primary" onclick="recomputeNumbers()">Recompute Numbers</button>
             </div>
         </div>
     </div>
